2003-06-17  Mark Mitchell  <mark@codesourcery.com>

	PR c++/10712
	* g++.dg/lookup/using7.C: New test.
	
2003-06-17  Mark Mitchell  <mark@codesourcery.com>

	PR c++/11105
	* g++.dg/abi/conv1.C: Remove it.
	* g++.dg/template/conv7.C: New test.
	* g++.dg/template/conv8.C: Likewise.
	* g++.old-deja/g++.ext/pretty2.C: Do not test __FUNCTION__ for a
	conversion operator.

2003-06-17  Janis Johnson  <janis187@us.ibm.com>

	* gcc.dg/compat/compat-common.h (DEBUG_INIT): New.
	* gcc.dg/compat/scalar-by-value-1_x.c: Use it.
	* gcc.dg/compat/scalar-by-value-2_x.c: Ditto.
	* gcc.dg/compat/scalar-by-value-3_x.c: Ditto.
	* gcc.dg/compat/scalar-by-value-4_x.c: Ditto.
	* gcc.dg/compat/scalar-return-1_x.c: Ditto.
	* gcc.dg/compat/scalar-return-2_x.c: Ditto.
	* gcc.dg/compat/scalar-return-3_x.c: Ditto.
	* gcc.dg/compat/scalar-return-4_x.c: Ditto.
	* gcc.dg/compat/struct-by-value-10_x.c: Ditto.
	* gcc.dg/compat/struct-by-value-11_x.c: Ditto.
	* gcc.dg/compat/struct-by-value-12_x.c: Ditto.
	* gcc.dg/compat/struct-by-value-13_x.c: Ditto.
	* gcc.dg/compat/struct-by-value-14_x.c: Ditto.
	* gcc.dg/compat/struct-by-value-15_x.c: Ditto.
	* gcc.dg/compat/struct-by-value-16_x.c: Ditto.
	* gcc.dg/compat/struct-by-value-17_x.c: Ditto.
	* gcc.dg/compat/struct-by-value-18_x.c: Ditto.
	* gcc.dg/compat/struct-by-value-2_x.c: Ditto.
	* gcc.dg/compat/struct-by-value-3_x.c: Ditto.
	* gcc.dg/compat/struct-by-value-4_x.c: Ditto.
	* gcc.dg/compat/struct-by-value-5_x.c: Ditto.
	* gcc.dg/compat/struct-by-value-6_x.c: Ditto.
	* gcc.dg/compat/struct-by-value-7_x.c: Ditto.
	* gcc.dg/compat/struct-by-value-8_x.c: Ditto.
	* gcc.dg/compat/struct-by-value-9_x.c: Ditto.
	* gcc.dg/compat/struct-return-10_x.c: Ditto.
	* gcc.dg/compat/struct-return-2_x.c: Ditto.
	* gcc.dg/compat/struct-return-3_x.c: Ditto.

2003-06-16  Mark Mitchell  <mark@codesourcery.com>

	* lib/gcc-dg.exp (dg-xfail-if): Fix thinko.
	* gcc.c-torture/compile/simd-5.c: Remove spurious PowerPC-64 XFAIL
	indications.
