@@ -1,5 +1,6 @@
 /* The arrays are too large for the xstormy16 - won't fit in 16 bits. */
-/* { dg-do assemble { xfail xstormy16-*-* h8300-*-* m6811-*-* m6812-*-* } } */
+/* { dg-xfail-if "The array too big" { "h8300-*-*" } { "-mno-h" } { "" } } */
+/* { dg-do assemble { xfail xstormy16-*-* m6811-*-* m6812-*-* } } */
 
 unsigned char	TIFFFax2DMode[20][256];
 unsigned char	TIFFFax2DNextState[20][256];
